--- a/packages/admin/tsconfig.json
+++ b/packages/admin/tsconfig.json
@@ -16,8 +16,11 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "incremental": true,
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "paths": {
+      "@kai/shared/*": ["../shared/*"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../shared/src/types/*.ts"],
   "exclude": ["node_modules"]
 }
