--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,6 +32,8 @@
     "react-dropzone": "^14.2.3",
     "react-query": "^3.39.3",
     "styled-components": "^6.0.4",
+    "three": "^0.160.0",
+    "three-mesh-bvh": "^0.6.8",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
@@ -45,6 +47,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.160.0",
     "@types/uuid": "^9.0.1",
     "eslint": "^8.44.0",
     "eslint-config-gatsby": "^4.0.0",
