--- a/packages/ml/requirements.txt
+++ b/packages/ml/requirements.txt
@@ -8,6 +8,8 @@ pandas>=2.0.0
 tensorflow>=2.12.0
 torch>=2.0.0
 torchvision>=0.15.0
+transformers>=4.30.0  # For CLIP
+accelerate>=0.20.0   # For optimized inference
 
 # Computer Vision
 opencv-python>=4.7.0
@@ -24,13 +26,33 @@ easyocr>=1.7.0
 # Image processing
 scikit-image>=0.20.0
 albumentations>=1.3.0
+controlnet-aux>=0.0.6  # ControlNet auxiliary models
+stable-diffusion-controlnet>=1.0.0  # ControlNet for Stable Diffusion
 
 # Vector search
 faiss-cpu>=1.7.4  # or faiss-gpu for GPU support
 
+# 3D Reconstruction Pipeline
+horizon-net>=1.0.0  # Room layout extraction
+segment-anything>=1.0  # SAM for segmentation
+ultralytics>=8.0.0  # YOLO v8
+shap-e>=0.1.0  # OpenAI's 3D generation model
+get3d>=1.0.0  # NVIDIA's GET3D
+3d-front-toolkit>=1.0.0  # 3D-FRONT dataset utilities
+timm>=0.9.2  # Required for MiDaS
+pytorch3d>=0.7.4  # 3D deep learning
+open3d>=0.17.0  # Point cloud and mesh processing
+blenderproc>=2.6.0  # 3D scene processing
+midas-py>=1.0.0  # Depth estimation
+nerfstudio>=0.3.0  # NeRF implementation
+instant-ngp>=1.0.0  # Fast NeRF training
+trimesh>=3.9.0  # Mesh processing utilities
+pyrender>=0.1.45  # 3D visualization
+matplotlib>=3.7.0  # Visualization
+diffusers>=0.19.0  # For advanced image processing
+
 # Utilities
 tqdm>=4.65.0
-matplotlib>=3.7.0
 seaborn>=0.12.0
 python-dotenv>=1.0.0
 pyyaml>=6.0.0
@@ -42,3 +64,7 @@ uvicorn>=0.22.0
 
 # Testing
 pytest>=7.3.0
+
+# CUDA support (optional, uncomment if using GPU)
+# cupy-cuda11x>=11.0.0  # Replace 11x with your CUDA version
+# torch-cuda>=2.0.0
