--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .js,.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "joi": "^17.9.2",
