--- a/packages/ml/tsconfig.json
+++ b/packages/ml/tsconfig.json
@@ -4,8 +4,11 @@
     "module": "commonjs",
     "lib": ["ES2020", "DOM"],
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true,
     "outDir": "./dist",
-    "rootDirs": ["./src", "../shared/src"],
+    "rootDir": "../../",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -22,5 +25,8 @@
     "src/**/*",
     "../shared/src/types/**/*"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../shared" }
+  ]
 }
