--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,6 +38,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.10.0",
+    "ws": "^8.17.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/ws": "^8.5.10",
     "eslint": "^8.44.0",
     "jest": "^29.6.1",
     "supertest": "^6.3.3",
