--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -20,7 +20,7 @@ on:
     secrets:
       docker_username:
         required: true
-      docker_password: 
+      docker_password:
         required: true
       docker_registry:
         required: true
@@ -79,11 +79,11 @@ jobs:
         run: |
           git clone git@github.com:your-org/gitops-repo.git
           cd gitops-repo
-          
+
           # Update image tags for production environment
           sed -i "s|image: .*kai-api-server:.*|image: ${{ secrets.docker_registry }}/${{ secrets.docker_username }}/kai-api-server:${{ inputs.sha }}|g" environments/production/kustomization.yaml
           sed -i "s|image: .*kai-coordinator:.*|image: ${{ secrets.docker_registry }}/${{ secrets.docker_username }}/kai-coordinator:${{ inputs.sha }}|g" environments/production/kustomization.yaml
-          
+
           # Commit and push changes
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
@@ -96,7 +96,7 @@ jobs:
           # Set up Node.js for migrations
           curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
           sudo apt-get install -y nodejs
-          
+
           # Run Supabase migrations for production
           npx supabase db push --db-url "${{ secrets.supabase_url }}" --auth-token "${{ secrets.supabase_service_key }}"
 
@@ -104,13 +104,13 @@ jobs:
         run: |
           # Deploy using Helm with canary options if selected
           chmod +x ./helm-charts/helm-deploy.sh
-          
+
           # Prepare canary flag if needed
           CANARY_ARGS=""
           if [ "${{ inputs.canary }}" = "true" ]; then
             CANARY_ARGS="--canary --canary-weight=${{ inputs.canary_weight }} --critical-services=api-server,coordinator-service"
           fi
-          
+
           # Run the deployment
           ./helm-charts/helm-deploy.sh \
             --context=${{ env.KUBE_CONTEXT }} \
@@ -123,8 +123,7 @@ jobs:
       - name: Deploy Client App to Vercel (Production)
         uses: amondnet/vercel-action@v20
         with:
-          zeit-token: ${{ secrets.vercel_token }}
-          vercel-token: ${{ secrets.vercel_token }}
+          vercel-token: ${{ secrets.vercel_token }} # Updated to use Vercel terminology
           vercel-org-id: ${{ secrets.vercel_org_id }}
           vercel-project-id: ${{ secrets.vercel_project_id_client }}
           working-directory: ./packages/client
@@ -136,8 +135,7 @@ jobs:
       - name: Deploy Admin Panel to Vercel (Production)
         uses: amondnet/vercel-action@v20
         with:
-          zeit-token: ${{ secrets.vercel_token }}
-          vercel-token: ${{ secrets.vercel_token }}
+          vercel-token: ${{ secrets.vercel_token }} # Updated to use Vercel terminology
           vercel-org-id: ${{ secrets.vercel_org_id }}
           vercel-project-id: ${{ secrets.vercel_project_id_admin }}
           working-directory: ./packages/admin
@@ -150,27 +148,27 @@ jobs:
         run: |
           echo "Monitoring production deployment health for 5 minutes..."
           FAILURES=0
-          
+
           for i in {1..30}; do
             # Check API health
             if ! curl -s -f https://api.kai-app.com/health > /dev/null; then
               FAILURES=$((FAILURES+1))
             fi
-            
+
             # Check coordinator health via Kubernetes
             if ! kubectl --context=${{ env.KUBE_CONTEXT }} get pods -n kai-system -l app=coordinator-service | grep -q "Running"; then
               FAILURES=$((FAILURES+1))
             fi
-            
+
             if [ $FAILURES -ge 5 ]; then
               echo "::warning::Health check failures detected in production environment"
               echo "health_status=degraded" >> $GITHUB_OUTPUT
               break
             fi
-            
+
             sleep 10
           done
-          
+
           if [ $FAILURES -lt 5 ]; then
             echo "health_status=healthy" >> $GITHUB_OUTPUT
             echo "Production deployment appears healthy"
