--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,7 +17,10 @@
     "@aws-sdk/s3-request-presigner": "^3.374.0",
     "@heroui/node": "^1.0.0",
     "@kai/shared": "0.1.0",
+    "@kai/mcp-client": "1.0.0",
     "@supabase/supabase-js": "^2.39.0",
+    "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
