--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -9,7 +9,9 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:components": "jest --testPathPattern=src/components",
+    "test:analytics": "jest --testPathPattern=src/components/analytics"
   },
   "dependencies": {
     "@kai/shared": "0.1.0",
