--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,50 @@
+# Terraform
 .terraform
 .terraform.lock.hcl
 *.tfstate
-*.backup
+*.tfstate.backup
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp/
+.pnp.js
+
+# Build outputs
+dist/
+build/
+out/
+.next/
+.cache/
+public/
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Logs
+logs/
+*.log
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
