--- a/flux/clusters/production/kai/jobs/kustomization.yaml
+++ b/flux/clusters/production/kai/jobs/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - sources
-  - releases
-  - flux-system
-  - kai
+  - ./dependency-management-job.yaml
