--- a/flux/clusters/production/kai/notification-system/kustomization.yaml
+++ b/flux/clusters/production/kai/notification-system/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - sources
-  - releases
-  - flux-system
-  - kai
+  - ./deployment.yaml
+  - ./webhook-deployment.yaml
