--- a/flux/clusters/production/kai/coordinator/config.yaml
+++ b/flux/clusters/production/kai/coordinator/config.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: coordinator-config
-  namespace: kai-ml
   labels:
     app: coordinator-service
     component: orchestration
@@ -12,7 +11,7 @@ data:
   redis_port: "6379"
   
   # Workflow configuration
-  workflow_namespace: "kai-ml"
+  workflow_namespace: "kai"
   workflow_archive_ttl: "168h"  # Keep workflow history for 7 days
   
   # Logging configuration
