--- a/flux/clusters/production/kai/workflows/3d-reconstruction-template.yaml
+++ b/flux/clusters/production/kai/workflows/3d-reconstruction-template.yaml
@@ -3,7 +3,7 @@ kind: WorkflowTemplate
 metadata:
   name: 3d-reconstruction
   labels:
-    app: kai-ml
+    app: kai
     component: workflows
     pipeline: 3d-reconstruction
 spec:
