--- a/flux/clusters/production/kai/infrastructure/prometheus-adapter.yaml
+++ b/flux/clusters/production/kai/infrastructure/prometheus-adapter.yaml
@@ -27,7 +27,7 @@ spec:
         - --config=/etc/adapter/config.yaml
         - --logtostderr=true
         - --metrics-relist-interval=1m
-        - --prometheus-url=http://prometheus.kai-ml.svc:9090/
+        - --prometheus-url=http://prometheus.kai.svc:9090/
         - --secure-port=6443
         ports:
         - containerPort: 6443
@@ -54,7 +54,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus-adapter
-  namespace: kai-ml
+  namespace: kai
   labels:
     app: prometheus-adapter
     component: monitoring
@@ -70,7 +70,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus-adapter
-  namespace: kai-ml
+  namespace: kai
   labels:
     app: prometheus-adapter
     component: monitoring
@@ -138,7 +138,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
-  namespace: kai-ml
+  namespace: kai
 ---
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
@@ -150,7 +150,7 @@ metadata:
 spec:
   service:
     name: prometheus-adapter
-    namespace: kai-ml
+    namespace: kai
   group: custom.metrics.k8s.io
   version: v1beta1
   insecureSkipTLSVerify: true
