--- a/flux/clusters/production/kai/ml-services/multimodal-pattern-recognition-deployment.yaml
+++ b/flux/clusters/production/kai/ml-services/multimodal-pattern-recognition-deployment.yaml
@@ -177,7 +177,7 @@ metadata:
   name: multimodal-pattern-config
 data:
   log_level: "info"
-  redis_host: "redis-master.kai-ml.svc.cluster.local"
+  redis_host: "redis-master.kai.svc.cluster.local"
   redis_port: "6379"
   max_batch_size: "8"
   default_vision_model: "vit-base-patch16-224"
