--- a/flux/clusters/production/kai/parameter-registry/service.yaml
+++ b/flux/clusters/production/kai/parameter-registry/service.yaml
@@ -79,6 +79,7 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: parameter-registry
+    namespace: kai
   minReplicas: 2
   maxReplicas: 5
   metrics:
