--- a/flux/clusters/production/kai/parameter-registry/service.yaml
+++ b/flux/clusters/production/kai/parameter-registry/service.yaml
@@ -1,6 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: parameter-registry
+  labels:
+    app: parameter-registry
+    component: ml-ops
+spec:
+  selector:
+    app: parameter-registry
+  ports:
+  - port: 80
+    targetPort: 5000
+    protocol: TCP
+    name: http
+  - port: 9100
+    targetPort: 9100
+    protocol: TCP
+    name: metrics
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: parameter-registry-service
   labels:
     app: parameter-registry
@@ -69,53 +90,3 @@ spec:
             name: parameter-registry-service
             port:
               name: http
----
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: parameter-registry-hpa
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: parameter-registry
-    namespace: kai
-  minReplicas: 2
-  maxReplicas: 5
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 70
-  - type: Resource
-    resource:
-      name: memory
-      target:
-        type: Utilization
-        averageUtilization: 70
-  behavior:
-    scaleDown:
-      stabilizationWindowSeconds: 300
-      policies:
-      - type: Pods
-        value: 1
-        periodSeconds: 60
-    scaleUp:
-      stabilizationWindowSeconds: 60
-      policies:
-      - type: Pods
-        value: 1
-        periodSeconds: 30
----
-apiVersion: policy/v1
-kind: PodDisruptionBudget
-metadata:
-  name: parameter-registry-pdb
-spec:
-  minAvailable: 1
-  selector:
-    matchLabels:
-      app: parameter-registry
-      component: api
