make secrets use stringdata to avoid base64 encoding

--- a/flux/clusters/production/kai/coordinator/secret.yaml
+++ b/flux/clusters/production/kai/coordinator/secret.yaml
@@ -3,9 +3,9 @@ kind: Secret
 metadata:
   name: coordinator-secrets
 type: Opaque
-data:
+stringData:
   # Values must be base64 encoded
   # Example: echo -n 'your-redis-password' | base64
-  redis-password: PUT_BASE64_ENCODED_REDIS_PASSWORD_HERE
+  redis-password: PUT__REDIS_PASSWORD_HERE
   # Add other secrets as needed (e.g., API keys)
   # some-api-key: PUT_BASE64_ENCODED_API_KEY_HERE
