--- a/flux/clusters/production/kai/distributed-processing/secret.yaml
+++ b/flux/clusters/production/kai/distributed-processing/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: distributed-processing-secrets
 type: Opaque
-data:
+stringData:
   # Values must be base64 encoded
   # Example: echo -n 'your-redis-password' | base64
   redis-password: PUT_BASE64_ENCODED_REDIS_PASSWORD_HERE
