--- a/flux/clusters/production/sources/helm-repository.yaml
+++ b/flux/clusters/production/sources/helm-repository.yaml
@@ -7,3 +7,12 @@ spec:
   interval: 5m
   url: https://kai-platform.github.io/helm-charts/
   timeout: 3m
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: argo
+  namespace: flux-system
+spec:
+  interval: 5m
+  url: https://argoproj.github.io/argo-helm
