--- a/flux/clusters/production/kai/workflows/kustomization.yaml
+++ b/flux/clusters/production/kai/workflows/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - ./3d-reconstruction-template.yaml
+  - ./3d-reconstruction-template.yaml
   - ./domain-specific-networks-template.yaml
   - ./multimodal-pattern-recognition-template.yaml
