--- a/flux/clusters/production/kai/coordinator/kustomization.yaml
+++ b/flux/clusters/production/kai/coordinator/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
   - ./deployment.yaml
   - ./hpa.yaml
   - ./pdb.yaml
+  - ./workflow-templates/relationship-aware-training-template.yaml
+  - ./workflow-templates/material-property-analytics-template.yaml
